Fixed bug for anonymous user

--- a/foodmonster/Main.storyboard
+++ b/foodmonster/Main.storyboard
@@ -2965,7 +2965,7 @@
     </designables>
     <inferredMetricsTieBreakers>
         <segue reference="f8d-o6-kG4"/>
-        <segue reference="PMX-6u-Gja"/>
+        <segue reference="HVY-g3-80p"/>
         <segue reference="xTg-CL-pQJ"/>
     </inferredMetricsTieBreakers>
     <resources>
