--- a/foodmonster/XiB/NewRecipe/CookStepTableViewCell.xib
+++ b/foodmonster/XiB/NewRecipe/CookStepTableViewCell.xib
@@ -18,7 +18,7 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="StK-O5-cYh">
                     <rect key="frame" x="15" y="175" width="366" height="82"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" name="darkTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
