--- a/foodmonster/XiB/NewRecipe/RecipeCategoryTableViewCell.xib
+++ b/foodmonster/XiB/NewRecipe/RecipeCategoryTableViewCell.xib
@@ -20,13 +20,13 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="90" id="4Ux-Mk-ZQi"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" name="darkTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Side" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cx2-Zx-CS4">
                     <rect key="frame" x="205" y="10" width="171" height="24"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" name="lightTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
