--- a/foodmonster/XiB/RecipeDetails/AboutRecipeTableViewCell.xib
+++ b/foodmonster/XiB/RecipeDetails/AboutRecipeTableViewCell.xib
@@ -8,11 +8,6 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="SF-Pro-Display-Semibold.otf">
-            <string>SFProDisplay-Semibold</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,8 +16,8 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mIT-aj-asH">
-                    <rect key="frame" x="30" y="10" width="354" height="66"/>
-                    <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="17"/>
+                    <rect key="frame" x="25" y="10" width="364" height="66"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                     <color key="textColor" name="darkTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -31,7 +26,7 @@
             <color key="backgroundColor" name="backgroundColorSet"/>
             <constraints>
                 <constraint firstItem="mIT-aj-asH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="GhZ-ps-BjW"/>
-                <constraint firstItem="mIT-aj-asH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="h0a-hu-KQ1"/>
+                <constraint firstItem="mIT-aj-asH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="h0a-hu-KQ1"/>
                 <constraint firstItem="mIT-aj-asH" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xAO-kF-8aM"/>
                 <constraint firstItem="mIT-aj-asH" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ymK-Vv-RN3"/>
             </constraints>
