--- a/foodmonster/XiB/Purchase/AddCustomPurchaseTableViewCell.xib
+++ b/foodmonster/XiB/Purchase/AddCustomPurchaseTableViewCell.xib
@@ -24,7 +24,7 @@
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add purchase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uNb-Jw-qCl">
                     <rect key="frame" x="15" y="4" width="360" height="36"/>
-                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <color key="textColor" name="lightTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
