--- a/foodmonster/XiB/profile/Base.lproj/NameTableViewCell.xib
+++ b/foodmonster/XiB/profile/Base.lproj/NameTableViewCell.xib
@@ -18,15 +18,15 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personal information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3P-hw-vaF">
                     <rect key="frame" x="20" y="16" width="150" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="150" id="FWl-Ae-QqT"/>
+                        <constraint firstAttribute="width" constant="150" id="3u7-Au-5lE"/>
                     </constraints>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                     <color key="textColor" name="darkTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nw4-8S-Gm7">
-                    <rect key="frame" x="180" y="25" width="215" height="0.0"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Egor Bryzgalov" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nw4-8S-Gm7">
+                    <rect key="frame" x="180" y="16" width="210" height="18"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                     <color key="textColor" name="lightTextColorSet"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -34,8 +34,7 @@
                     <rect key="frame" x="400" y="10" width="9" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="4eY-8f-zAV"/>
-                        <constraint firstAttribute="width" constant="9" id="PZz-ud-zxT"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="9" id="gbh-Jj-Fvp"/>
+                        <constraint firstAttribute="width" constant="9" id="gbh-Jj-Fvp"/>
                     </constraints>
                 </imageView>
             </subviews>
@@ -48,7 +47,7 @@
                 <constraint firstItem="KSi-2D-f7Z" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="aNB-Co-ppZ"/>
                 <constraint firstItem="L3P-hw-vaF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="bvl-wj-HOQ"/>
                 <constraint firstItem="nw4-8S-Gm7" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="j7j-UB-TEH"/>
-                <constraint firstItem="KSi-2D-f7Z" firstAttribute="leading" secondItem="nw4-8S-Gm7" secondAttribute="trailing" constant="5" id="r6o-eK-7ee"/>
+                <constraint firstItem="KSi-2D-f7Z" firstAttribute="leading" secondItem="nw4-8S-Gm7" secondAttribute="trailing" constant="10" id="r6o-eK-7ee"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
